<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.maccproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_home_to_userFragment"
            app:destination="@id/userFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.maccproject.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz">
        <action
            android:id="@+id/action_navigation_quiz_to_quiz_graphic"
            app:destination="@id/quiz_graphic"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.example.maccproject.ui.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shop" >
    <action
        android:id="@+id/action_navigation_shop_to_shop_cart"
        app:destination="@id/navigation_shop_cart"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_right"
        app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shop_cart"
        android:name="com.example.maccproject.ui.shop.ShoppingCartFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_shopping_cart" >
        <action
            android:id="@+id/action_navigation_shop_cart_to_shop"
            app:destination="@id/navigation_shop"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/quiz_graphic"
        android:name="com.example.maccproject.ui.quiz.QuizOnProgressFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz_on_progress" >
        <action
            android:id="@+id/action_quiz_graphic_to_quiz_result"
            app:destination="@id/quiz_result"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_quiz_graphic_to_navigation_quiz"
            app:destination="@id/navigation_quiz"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/quiz_result"
        android:name="com.example.maccproject.ui.quiz.QuizResultFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz_result">
        <action
            android:id="@+id/action_quiz_result_to_navigation_quiz"
            app:destination="@id/navigation_quiz"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="accumulatedPoints"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.maccproject.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_navigation_game_to_gameActivity"
            app:destination="@id/gameActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.maccproject.ui.home.RegistrationFragment"
        android:label="RegistrationFragment" >
        <action
            android:id="@+id/action_registrationFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.maccproject.ui.home.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
        <action
            android:id="@+id/action_loginFragment_to_userFragment"
            app:destination="@id/userFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.maccproject.ui.home.ForgotPasswordFragment"
        android:label="fragment_forgot_password"
        tools:layout="@layout/fragment_forgot_password" >
        <action
            android:id="@+id/action_forgotPasswordFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.maccproject.ui.home.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_userFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left" />
    </fragment>

    <activity
        android:id="@+id/gameActivity"
        android:name="com.example.maccproject.ui.game.GameActivity"
        android:label="activity_game"
        tools:layout="@layout/activity_game" />

</navigation>